tests/ui/errors/snapshots/parse_misplaced_type_alias_in_function.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:3]
 2 │ fn main() {
 3 │   type Score = int
   ·   ──┬─
   ·     ╰── misplaced
 4 │ }
   ╰────
  help: Move this type alias to the top level of the file · code: [parse.syntax_error]
